--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pandas = "2.*"
 pyarrow = "*"
 scikit-learn = "*"
 seaborn = "*"
+shap="0.47.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "*"
