--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,11 +30,11 @@ dev = [
 ]
 
 [tool.uv.sources]
-torch = [{ index = "pytorch-cpu" }]
+torch = [{  index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'"  }]
 
 [[tool.uv.index]]
-name = "pytorch-cpu"
-url = "https://download.pytorch.org/whl/cpu"
+name = "pytorch-cu124"
+url = "https://download.pytorch.org/whl/cu124"
 explicit = true
 
 [tool.ruff.lint]
