--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,11 @@ dependencies = [
     "pyarrow",
     "pynndescent",
     "scikit-fingerprints",
-    "scikit-learn",
+    "scikit-learn>=0.24",
+    "scikit-learn-extra",
     "seaborn",
     "sentence_transformers",
+    "numpy",
     "torch",
     "tqdm"
 ]
