--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ dependencies = [
     "tqdm",
     "scikit-learn-extra>=0.3.0",
     "xgboost",
+    "arfs",
+    "lightgbm",
+    "umap-learn",
 ]
 
 [dependency-groups]
